fixed issue with mobile header and footer

--- a/css/style.css
+++ b/css/style.css
@@ -8435,7 +8435,7 @@ figcaption {
     width: 100vw; }
 
   .marginless-row {
-    width: 1200px; }
+    width: 100%; }
 
   .post-container {
     width: 50%;
