--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -166,9 +166,9 @@ figcaption {
 		padding: 20px;
 	}
 
-	.full-width {
+//	.full-width {
 //		width: 100%;
-	}
+//	}
 
 	.fixed-height {
 		height: $toc-height;
