remove full-width class from footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer full-width">
+<footer class="page-footer">
 	<div class="container">
 		<div class="row footer-row">
 			<div class="col s12 m6 l6 footer-column">
