--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -465,7 +465,8 @@ figcaption {
 		.nav-wrapper {
 			div {
 				height: 100%;
-				width: 5%;
+				width: 60px;
+				padding-left: 15px;
 				text-align: center;
 				-webkit-transition: background 0.15s linear;
         			-moz-transition: background 0.15s linear;
