--- a/css/style.css
+++ b/css/style.css
@@ -8686,7 +8686,8 @@ figcaption {
 
 .navbar-fixed .header-background .nav-wrapper div {
   height: 100%;
-  width: 5%;
+  width: 60px;
+  padding-left: 15px;
   text-align: center;
   -webkit-transition: background 0.15s linear;
   -moz-transition: background 0.15s linear;
