--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,9 @@
   <div class="nav-wrapper valign-wrapper">
     <a id="logo-container" href="{{ site.baseurl }}/#table-of-contents" class="brand-logo">{{site.title}}</a>
     <div class="left valign-wrapper">
-      <a href="{{ site.baseurl }}/#{{ page.category | downcase | replace: ' ', '-'}}"><i class="material-icons medium white-text">keyboard_arrow_left</i></a>
+      	<a href="{{ site.baseurl }}/#{{ page.category | downcase | replace: ' ', '-'}}">
+	    <i class="material-icons medium white-text">keyboard_arrow_left</i>
+	</a>
     </div>
   </div>
 </nav>
