--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=YES" />
+  <meta name="description" content="RUCS is a non-archival publication featuring the best of undergraduate computer science research at the University of Toronto."/>
+  <meta name="theme-color" content="#0097a7">
 
   <title>RUCS</title>
 
