--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,33 +1,38 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=YES" />
+
+  {% if page.url == '/index.html' %}
   <meta name="description" content="RUCS is a non-archival publication featuring the best of undergraduate computer science research at the University of Toronto."/>
-<<<<<<< HEAD
+  {% endif %}
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0097a7">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
   <meta name="theme-color" content="#0097a7">
+  
+  <meta property="og:image" content="/android-chrome-192x192.png" />
 
-=======
-  <link rel="icon" type="image/x-icon" href="/RUCS.ico">
-  <meta property="og:image" content="/RUCS.ico" />
-  <meta name="theme-color" content="#0097A7"> 
->>>>>>> c04ce2dbb2e1bf99d2c46ca337191f971e0a1135
-  <title>RUCS</title>
-
-  <!-- Google Analytics -->
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-69783905-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-  <!-- favicon -->
-  <link rel="shortcut icon" href="{{ site.baseurl }}/RUCS.ico" type="image/x-icon">
-  <link rel="icon" href="{{ site.baseurl }}/RUCS.ico" type="image/x-icon">
+  {% if page.url == '/index.html' %}
+  <title>RUCS | Review of Undergraduate Computer Science</title>
+  {% else %}
+  <title> {{ page.title | truncate: 60 }} | RUCS</title>
+  {% endif %}
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
